# mirakuru

./: .bumpversion.cfg  .coverage  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Pipfile  README.rst  mypy.ini  pylama.ini  pylintrc  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  automergelint.yml  build.yml  linters.yml  pr-check.yml  pre-commit.yml  pypi.yml  tests-macos.yml  tests-windows.yml  tests.yml
docs/source/: api.rst  basic.rst  conf.py  index.rst
docs/source/api/: exceptions.rst  executors.rst
mirakuru/: __init__.py  base.py  base_env.py  cli.py  compat.py  exceptions.py  http.py  output.py  pid.py  signals.py  tcp.py  unixsocket.py
mirakuru/executors/: __init__.py  http.py  http_coordinated_executor.py  output.py  output_coordinated_executor.py  simple.py  simple_executor.py  tcp.py  tcp_coordinated_executor.py
newsfragments/: +76d2085e.misc.rst  +bf7095ea.misc.rst  +ce379ebe.misc.rst  +ceb0e424.misc.rst  +f5d4730a.break.rst  613.misc.rst  615.misc.rst  616.misc.rst  618.misc.rst  619.misc.rst  628.misc.rst  633.bugfix.rst  639.misc.rst  653.misc.rst  655.misc.rst  664.misc.rst  686.misc.rst  724.misc.rst  726.misc.rst  742.misc.rst  810.misc.rst  841.misc.rst  842.feature.rst
src/mirakuru/: __init__.py  base.py  base_env.py  compat.py  exceptions.py  http.py  kill.py  output.py  pid.py  tcp.py  unixsocket.py
summon_process/: __init__.py  orchestrator.py  utils.py
summon_process/executors/: __init__.py  http_coordinated_executor.py  output_coordinated_executor.py  simple_executor.py  tcp_coordinated_executor.py
summon_process/tests/: slow_server.py  test_orchestrator.py  test_utils.py
summon_process/tests/executors/: test_http_coordinated_executor.py  test_output_coordinated_executor.py  test_simple_executor.py  test_tcp_coordinated_executor.py
tests/: __init__.py  conftest.py  retry.py  sample_daemon.py  server_for_tests.py  signals.py  slow_server.py  test_base.py  test_server.py  unixsocketserver_for_tests.py
tests/executors/: __init__.py  test_executor.py  test_executor_kill.py  test_http_coordinated_executor.py  test_http_executor.py  test_output_coordinated_executor.py  test_output_executor.py  test_pid_executor.py  test_simple_executor.py  test_tcp_coordinated_executor.py  test_tcp_executor.py  test_unixsocket_executor.py
