[project]
name = "mirakuru"
version = "2.5.3"
description = "Process executor (not only) for tests."
readme = "README.rst"
keywords = ["process", "executor", "tests", "orchestration"]
license = {file = "LICENSE"}
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # psutil is used to find processes leaked during termination.
    # It runs on many platforms but not Cygwin:
    # <https://github.com/giampaolo/psutil/issues/82>.
    "psutil>=4.0.0; sys_platform != 'cygwin'",
]
requires-python = ">= 3.9"

[project.urls]
"Source" = "https://github.com/ClearcodeHQ/mirakuru"
"Bug Tracker" = "https://github.com/ClearcodeHQ/mirakuru/issues"
"Changelog" = "https://github.com/ClearcodeHQ/mirakuru/blob/v2.5.3/CHANGES.rst"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["mirakuru*"]
exclude = ["tests*"]
namespaces = false

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://github.com/ClearcodeHQ/mirakuru/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneus"
showcontent = false

[tool.pytest.ini_options]
filterwarnings = "error"
xfail_strict = "True"

[tool.black]
line-length = 100
target-version = ['py39']
include = '.*\.pyi?$'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "2.5.3"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""


# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "mirakuru/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = '"Changelog" = "https://github.com/ClearcodeHQ/mirakuru/blob/v{current_version}/CHANGES.rst"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
