[metadata]
name = mirakuru
version = 2.4.1
url = https://github.com/ClearcodeHQ/mirakuru
description = Process executor (not only) for tests.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = process, executor, tests, orchestration
license = LGPLv3+
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src
install_requires =
    # psutil is used to find processes leaked during termination.
    # It runs on many platforms but not Cygwin:
    # <https://github.com/giampaolo/psutil/issues/82>.
    psutil>=4.0.0; sys_platform != "cygwin"

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    python-daemon

[pycodestyle]
max-line-length = 80
exclude = docs/*,build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!docs|build|venv).*\.py'

[tool:pytest]
addopts =  -vvv --capture=no --showlocals --verbose --cov src/mirakuru --cov tests
testpaths = tests/
filterwarnings = error
xfail_strict = True